--- a/pom.xml
+++ b/pom.xml
@@ -28,18 +28,22 @@
       <id>gestdown</id>
       <url>http://gestdown.info:8888/artifactory/repo</url>
     </repository>
+    <repository>
+      <id>morganm-repo</id>
+      <url>http://morganmc.dyndns.org/nexus/content/groups/public/</url>
+    </repository>
     </repositories>
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.2.3-R0.2-SNAPSHOT</version>
+      <version>1.3.1-R0.1-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>net.milkbowl.vault</groupId>
       <artifactId>Vault</artifactId>
-      <version>1.2.9-SNAPSHOT</version>
+      <version>1.2.15</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
