--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ensifera</groupId>
   <artifactId>CraftIRC</artifactId>
   <packaging>jar</packaging>
-  <version>2.14-SNAPSHOT</version>
+  <version>2.18-SNAPSHOT</version>
   <name>CraftIRC</name>
   <url>http://www.github.com/animosity/CraftIRC</url>
   <properties>
@@ -13,7 +13,7 @@
   <scm>
     <connection>scm:git:git://github.com/Animosity/CraftIRC/CraftIRC.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/Animosity/CraftIRC/CraftIRC.git</developerConnection>
-    <url>s://www.github.com/animosity/CraftIRC</url>
+    <url>https://www.github.com/animosity/CraftIRC</url>
   </scm>
   <repositories>
     <repository>
@@ -32,13 +32,18 @@
       <id>morganm-repo</id>
       <url>http://morganmc.dyndns.org/nexus/content/groups/public/</url>
     </repository>
-    </repositories>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
+      <artifactId>bukkit</artifactId>
+      <version>1.5-R0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.3.1-R1.0</version>
-      <type>jar</type>
+      <version>1.5-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>net.milkbowl.vault</groupId>
